--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,35 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Rpi Publish and Debug",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "RpiPublish",
+            "program": "~/raspberrypi.net.core/raspberrypi.net.core",
+            "cwd": "~/raspberrypi.net.core",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "pipeTransport": {
+            "pipeCwd": "${workspaceRoot}",
+            "pipeProgram": "ssh",
+            "pipeArgs": [
+                "pi@raspberrypi"
+            ],
+            "debuggerPath": "~/vsdbg/vsdbg"
+            }
+        },
+        {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": "RPi Backend Launch",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/raspberrypi.net.core.backend/bin/Debug/net6.0/raspberrypi.net.core.backend.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/raspberrypi.net.core.backend.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/raspberrypi.net.core.backend",
+            "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
