--- a/raspberrypi.net.core.backend/raspberrypi.net.core.backend.csproj
+++ b/raspberrypi.net.core.backend/raspberrypi.net.core.backend.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
