Implement Device Twin Updater

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,6 +36,19 @@
             "stopAtEntry": false
         },
         {
+            "name": "Twin Updater Launch",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "buildTwinUpdater",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/raspberrypi.net.core.twinupdater/bin/Debug/net6.0/raspberrypi.net.core.twinupdater.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
